tests/baselines/reference/unusedImports12.errors.txt
tests/cases/compiler/a.ts(1,1): error TS6133: 'Member' is declared but its value is never read.
tests/cases/compiler/a.ts(2,1): error TS6192: All imports in import declaration are unused.
tests/cases/compiler/a.ts(3,1): error TS6133: 'ns' is declared but its value is never read.
tests/cases/compiler/a.ts(4,8): error TS6133: 'r' is declared but its value is never read.


==== tests/cases/compiler/a.ts (4 errors) ====
    import { Member } from './b';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'Member' is declared but its value is never read.
    import d, { Member as M } from './b';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    import * as ns from './b';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'ns' is declared but its value is never read.
    import r = require("./b");
           ~
!!! error TS6133: 'r' is declared but its value is never read.
    
==== tests/cases/compiler/b.ts (0 errors) ====
    export class Member {}
    export default Member;
    
    